feat: extracting chain logic to interfaces